Prevent wrapping of category name.

--- a/css/budget.css
+++ b/css/budget.css
@@ -22,7 +22,7 @@
 }
 
 .category-name {
-  
+  white-space: nowrap;
 }
 
 .category-graph {
